# CompilerCourseLabs

lab1/: CMakeLists.txt  FSMatrix.h  FirstTask.h  ISignal.h  IState.h  Log.h  SecondTask.h  ThirdTask.h  input  main.cpp
lab2/: CMakeLists.txt  InfixTransform.cc  InfixTransform.cpp  InfixTransform.h  Regex2NFA.cpp  Regex2NFA.h  State.cpp  State.h  SubsetConstruction.cpp  SubsetConstruction.h  ThompsonConstruction.cpp  ThompsonConstruction.h  main.cpp
pushdown_auto/: CMakeLists.txt  first_task.h  main.cpp  second_task.h
